# NurbsDraw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_PLAN.md  README.md  cmakelists.txt  cmakepresets.json  imgui.ini  main.cpp
.github/: copilot-instructions.md
core/: BCurve.cpp  BCurve.h  BernstainBase.cpp  BernsteinBase.h  BezeirCurve.cpp  BezeirCurve.h  Point.h  Vector.h
include/: Logger.h
src/app/: AppController.cpp  AppController.h  Command.cpp  Command.h  Document.cpp  Document.h
src/core/: BernstainBase.cpp  BezeirCurve.cpp  Vector.cpp
src/gui/widget/: Canvas.cpp  Canvas.h  ControlButton.cpp  ControlButton.h  CoordList.cpp  CoordList.h
src/gui/window/: DrawBSpline.cpp  DrawBSpline.h  DrawBezier.cpp  DrawBezier.h  Manager.cpp  Manager.h
src/math/: BCurve.cpp  BCurve.h  BSurface.cpp  BSurface.h  BezeirCurve.h  BezierCurve.cpp  BezierCurve.h  Fitting.cpp  Fitting.h  Sampler.cpp  Sampler.h  Vec.h  Vector.cpp  Vector.h  concepts.h
src/ui/: Canvas.cpp  Canvas.h  Curve2DWindow.cpp  Curve2DWindow.h  Drawable.cpp  Drawable.h  QtCanvas.cpp  QtCanvas.h  canvas.cpp  canvas.h
src/ui/windows/: curve2d.cpp  curve2d.h  curve3d.cpp  curve3d.h
tests/: CMakeLists.txt  VectorTest.cpp
